# femder

./: 3d_fem_run.py  FEM3D.py  FEM_1D.py  README.md  __init__.py  current_mesh.brep  current_mesh.msh  environment.yml  pyproject.toml  requirements.txt  setup.py  testmesh.msh
Mshs/: FEM_3Dcurrent_field_yz.msh
Mshs/BEM_3D/: Hemi.FCStd  cubo_f.brep  cubo_f.geo  cubo_g.brep  cubo_g.geo  cubo_g.msh  cubo_g.nas  cubo_g_f.geo  current_mesh2.vtk  cylinder.geo  hemi_30_cm_132cm.brep  hemi_30_cm_132cm.geo
Mshs/FEM_1D/: ex_aula.brep  ex_aula.geo  ex_aula_completo.brep  ex_aula_completo.geo  helmholtz.geo  mnav_helm.geo
Mshs/FEM_3D/: asd.geo  bixa1_mesh.msh  box.geo  box.msh  caixa.geo  caixa.msh  caixa.step  cplx_room - Copy.geo  cplx_room.brep  cplx_room.geo  cplx_room.geo.opt  cplx_room.msh  cplx_room.step  cplx_vol.geo  cplx_vol.step  current_mesh.bdf  current_mesh.msh  current_mesh.vtk  current_mesh2.vtk  room_mesh_MG_treatments - Copy.geo  room_vol.brep  room_vol.geo  room_vol.step  teste_dj.geo
examples/: 3d_fem_run.py  3d_fem_run1.py  3d_fem_run_2order.py  3d_fem_run_fix_grid.py  3d_fem_run_notebook.ipynb  3d_fem_run_order2.py  MG_Room.py  bem_3d_run.py  current_geo.geo_unrolled  current_mesh.brep  current_mesh.msh  femder_bemder_comp.py
femder/: BEM_3D.py  BEM_3D_copy.py  BoundaryConditions.py  FEM_3D.py  FEM_3D_order2.py  FEM_3D_stripped.py  GeometryGenerate.py  TMM_rina_improved.py  __init__.py  controlsair.py  fem_numerical.py  grid_importing.py  optimization_helpers.py  plot_tools.py  rayinidir.py  receivers.py  sources.py  utils.py
(+15 files in other folders)
